[package]
name = "js-revm"
version = "0.1.0"
description = "JS wrapper and bindings for the EVM implemented in Rust"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
hex = "0.4.3"
revm = "3.3.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
